# fastAPI

./: README.md  alembic.ini  docker-compose.yml  output.txt  pyproject.toml  tester_sql.py
app/: auth_user.py  depends.py  main.py  routes.py  schemas.py
app/db/: connection.py  model.py  models.py
migrations/: env.py
migrations/versions/: 9e046ca6a8c9_add_users_tables.py
